-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 4.7.2
-
None
-
-
c016c6737b4d9392d9df4f2f0b5c10b4511c4ed0 (qt-creator/qt-creator/4.8)
Debugging with no command line arguments works fine, but can't debug a program if I set command line arguments in "Run settings". Basically, debugger fails with:
>@
>result={token="21",success="1",msg="success",exe="/bin/sh"}@
>21^
<23insertBreakpoint({"address":0,"command":"","condition":"","enabled":1,"expression":"","file":"/Users/enmk/proj/Multy-Core/multy_core/src/api/common.cpp","function":"","id":0,"ignorecount":0,"line":70,"modelid":"1","oneshot":0,"token":23,"type":1})
>(lldb) script theDumper.runEngine({"token":22})>@
>success="0",error={type="1",status="process exited with status -1 (cannot attach to process due to System Integrity Protection)",code="4294967295",desc="error: process exited with status -1 (cannot attach to process due to System Integrity Protection)"}@
>@
>state="enginerunfailed"@
dNOTE: ENGINE RUN FAILED
sRun failed.
Versions of all stuff involved:
$ sw_vers
ProductName: Mac OS X
ProductVersion: 10.14.1
BuildVersion: 18B75
$ /usr/bin/gcc --version
Configured with: --prefix=/Applications/Xcode.app/Contents/Developer/usr --with-gxx-include-dir=/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.14.sdk/usr/include/c++/4.2.1
Apple LLVM version 10.0.0 (clang-1000.11.45.5)
Target: x86_64-apple-darwin18.0.0
Thread model: posix
InstalledDir: /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin
$ /usr/bin/g++ --version
Configured with: --prefix=/Applications/Xcode.app/Contents/Developer/usr --with-gxx-include-dir=/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.14.sdk/usr/include/c++/4.2.1
Apple LLVM version 10.0.0 (clang-1000.11.45.5)
Target: x86_64-apple-darwin18.0.0
Thread model: posix
InstalledDir: /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin
$ /usr/bin/lldb --version
lldb-1000.11.38.2
Swift-4.2
$ /usr/local/bin/cmake --version
cmake version 3.11.4
CMake suite maintained and supported by Kitware (kitware.com/cmake).
Please see full debugger log contents in attachment.
| For Gerrit Dashboard: QTCREATORBUG-21433 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 244821,5 | Debugger: Fix LLDB start with complex command lines | 4.8 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |